# naukri-helper

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
docs/: USER_GUIDE.md  build_user_guide.py
src/naukri_tool/: __init__.py  cli.py  config.py  logging_setup.py
