[project]
name = "naukri-tool"
version = "0.1.0"
description = "Personal CLI that searches Naukri.com and tailors resumes per job."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "naukri-tool author" }]
license = { text = "Proprietary" }
dependencies = [
    "typer>=0.12",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
]

[project.scripts]
naukri-tool = "naukri_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/naukri_tool"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
